src/main/kotlin/com/example/highthon/global/config/error/exception/ExpiredTokenException.kt
package com.example.highthon.global.config.error.exception

import com.example.highthon.global.config.error.data.ErrorCode


object ExpiredTokenException: BusinessException(ErrorCode.EXPIRED_TOKEN)
